<resources>
    <string name="app_name">Online CMS</string>
    <string name="login_email">Email Address</string>
    <string name="login_password">Password</string>
    <string name="login_button">Login</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="login_register">Not a member? Get registered now!</string>
    <string name="register">REGISTER</string>
    <string name="register_name_surname">Name, Surname</string>
    <string name="forgot_password_instruction">Enter your email address and we will send you a link so you can log back into your account.</string>
    <string name="reset_password_button">Reset Password</string>
    <string name="register_password_again">Retype Password</string>
    <string name="register_button_sign_up">SIGN UP</string>
    <string name="profile_my_profile">My Profile</string>
    <string name="profile_sign_out">Sign Out</string>
    <string name="profile_new_complaint">New Complaint</string>
    <string name="profile_my_complaints">My Complaints</string>
    <string name="profile_profile_settings">Profile Settings</string>
    <string name="profile_settings_header">Profile Settings</string>
    <string name="profile_settings_new_password">New Password</string>
    <string name="save_button">Save</string>
    <string name="discard_button">Dıscard</string>
    <string name="new_complaint_header_text">New Complaint</string>
    <string name="new_complaint_info_text">Please send us your complaints to make our place more beautiful!</string>
    <string name="new_complaint_title_text">Title</string>
    <string name="new_complaint_description_text">Description</string>
    <string name="new_complaint_take_photo_text">Take Photo</string>
    <string name="new_complaint_add_from_gallery_text">Add From Gallery</string>
    <string name="new_complaint_add_location_text">Add Location</string>
    <string name="my_complaints_header_text">My Complaints</string>
    <string name="map_key">AIzaSyAM_vLkGDWCGA8UMZlnl-Q2C4juWtvTJLM</string>
    <string name="option_get_place">SELECT</string>
    <string name="send_complaint">SAVE COMPLAINT</string>
    <string name="dialog_title">Title: </string>
    <string name="dialog_description">Description: </string>
    <string name="dialog_address">Address: </string>
    <string name="dialog_image">Image: </string>
    <string name="dialog_email">Email: </string>
    <string name="dialog_date">Date: </string>
    <string name="dialog_status">Status: </string>
    <string name="admin_profile_admin">Admin</string>
    <string name="admin_profile_profile_settings">Profile Settings</string>
    <string name="admin_profile_all_complaints">All Complaints</string>
    <string name="admin_profile_add_admin">Add Admin</string>
    <string name="add_new_admin">Add New Admin</string>
    <string name="add_new_admin_name_surname">Name, Surname</string>
    <string name="add_new_admin_email">Email Address</string>
    <string name="add_new_admin_password">Password</string>
    <string name="add_new_admin_password_again">Retype Password</string>
    <string name="add_new_admin_button">ADD</string>
    <string name="all_complaints_header_text">All Complaints</string>
    <string name="admin_each_complaints">Complaint</string>
    <string name="admin_each_complaints_user">User: </string>
    <string-array name="status">
        <item>Open</item>
        <item>Closed</item>
    </string-array>


</resources>