<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#FFF6AD">

    <TextView
        android:id="@+id/reset_password_text_view1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/reset_password_text_view2"
        android:layout_marginTop="70dp"
        android:text="@string/forgot_password"
        android:textSize="25sp"
        android:textColor="@color/black">

    </TextView>

    <TextView
        android:id="@+id/reset_password_text_view2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:layout_constraintBottom_toTopOf="@id/reset_password_email"
        android:layout_marginBottom="40dp"
        android:text="@string/forgot_password_instruction"
        android:textAlignment="center"
        android:textSize="20sp"
        android:gravity="center_horizontal">

    </TextView>

    <EditText
        android:id="@+id/reset_password_email"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:background="@drawable/edit_text_rounded_corners"
        android:drawableStart="@drawable/ic_user"
        android:drawablePadding="10dp"
        android:hint="@string/login_email"
        android:inputType="textEmailAddress"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textSize="15sp"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

    </EditText>

    <Button
        android:id="@+id/button_reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_password_button"
        android:textAllCaps="false"
        android:textColor="#FFF6AD"
        app:backgroundTint="#2196F3"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/reset_password_email"
        android:layout_marginTop="40dp"
        app:strokeColor="#2196F3"
        app:strokeWidth="2dp">

    </Button>

    <Button
        android:id="@+id/button_back_to_login"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back_button"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:backgroundTint="#FFF6AD"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_reset"
        app:layout_constraintBottom_toBottomOf="parent">

    </Button>
</androidx.constraintlayout.widget.ConstraintLayout>