<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF6AD">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/new_complaint_upper_constraint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#2196F3"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/new_complaint_header_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/new_complaint_header_text"
            android:textColor="#FFF6AD"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </TextView>

        <TextView
            android:id="@+id/new_complaint_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="faruk_colak53@hotmail.com"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="@id/new_complaint_header_text"
            app:layout_constraintTop_toBottomOf="@id/new_complaint_header_text">

        </TextView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/new_complaint_square"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:background="@drawable/square"
        android:rotation="45"
        app:layout_constraintBottom_toBottomOf="@id/new_complaint_upper_constraint"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/new_complaint_upper_constraint">

    </ImageView>

    <ScrollView
        android:id="@+id/new_complaint_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/new_complaint_upper_constraint">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/new_complaint_constraint_in_scroll_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/new_complaint_info_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/new_complaint_info_text"
                android:textColor="@color/red"
                android:textSize="15sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            </TextView>

            <TextView
                android:id="@+id/new_complaint_title_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/new_complaint_title_text"
                android:textColor="#2196F3"
                android:textSize="15sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/new_complaint_info_text"></TextView>

            <EditText
                android:id="@+id/new_complaint_title_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                app:layout_constraintLeft_toLeftOf="@id/new_complaint_title_text_view"
                app:layout_constraintTop_toBottomOf="@id/new_complaint_title_text_view">

            </EditText>

            <TextView
                android:id="@+id/new_complaint_description_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/new_complaint_description_text"
                android:textColor="#2196F3"
                android:textSize="15sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/new_complaint_title_edit_text"></TextView>

            <EditText
                android:id="@+id/new_complaint_description_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                app:layout_constraintLeft_toLeftOf="@id/new_complaint_description_text_view"
                app:layout_constraintTop_toBottomOf="@id/new_complaint_description_text_view">

            </EditText>

            <Button
                android:id="@+id/new_complaint_take_photo_button"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:drawableLeft="@drawable/ic_take_photo"
                android:onClick="takePhoto"
                android:text="@string/new_complaint_take_photo_text"
                android:textAllCaps="false"
                android:textColor="#FFF6AD"
                android:textSize="12sp"
                app:layout_constraintLeft_toLeftOf="@id/new_complaint_description_text_view"
                app:layout_constraintRight_toLeftOf="@id/new_complaint_add_from_gallery_button"
                app:layout_constraintTop_toBottomOf="@id/new_complaint_description_edit_text">

            </Button>

            <Button
                android:id="@+id/new_complaint_add_from_gallery_button"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:drawableLeft="@drawable/ic_attach"
                android:onClick="addFromGallery"
                android:text="@string/new_complaint_add_from_gallery_text"
                android:textAllCaps="false"
                android:textColor="#FFF6AD"
                android:textSize="12sp"
                app:layout_constraintLeft_toRightOf="@id/new_complaint_take_photo_button"
                app:layout_constraintRight_toRightOf="@id/new_complaint_description_edit_text"
                app:layout_constraintTop_toBottomOf="@id/new_complaint_description_edit_text">

            </Button>

            <ImageView
                android:id="@+id/new_complaint_image_view"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="20dp"
                android:visibility="gone"
                app:layout_constraintLeft_toLeftOf="@id/new_complaint_take_photo_button"
                app:layout_constraintTop_toBottomOf="@id/new_complaint_take_photo_button">

            </ImageView>

            <Button
                android:id="@+id/new_complaint_add_location"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:drawableLeft="@drawable/ic_location"
                android:text="@string/new_complaint_add_location_text"
                android:textAllCaps="false"
                android:textColor="#FFF6AD"
                android:textSize="12sp"
                app:layout_constraintLeft_toLeftOf="@id/new_complaint_take_photo_button"
                app:layout_constraintTop_toBottomOf="@id/new_complaint_image_view">

            </Button>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>