<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF6AD">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/admin_each_complaint_upper_constraint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#2196F3"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/admin_each_complaint_header_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/admin_each_complaints"
            android:textColor="#FFF6AD"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </TextView>

        <TextView
            android:id="@+id/admin_each_complaint_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/admin_each_complaints_user"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="@id/admin_each_complaint_header_text"
            app:layout_constraintTop_toBottomOf="@id/admin_each_complaint_header_text">

        </TextView>

        <TextView
            android:id="@+id/admin_each_complaint_user_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/admin_each_complaint_user">

        </TextView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/all_complaints_square"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:background="@drawable/square"
        android:rotation="45"
        app:layout_constraintBottom_toBottomOf="@id/admin_each_complaint_upper_constraint"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/admin_each_complaint_upper_constraint">

    </ImageView>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/all_complaints_square">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/admin_each_complaint_lower_constraint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/admin_each_complaint_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/dialog_email"
                android:textColor="#2196F3"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            </TextView>

            <TextView
                android:id="@+id/admin_each_complaint_email_content"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:textColor="#2196F3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/admin_each_complaint_description"
                app:layout_constraintTop_toTopOf="@id/admin_each_complaint_email">

            </TextView>

            <TextView
                android:id="@+id/admin_each_complaint_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:text="@string/dialog_title"
                android:textColor="#2196F3"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/admin_each_complaint_email_content">

            </TextView>

            <TextView
                android:id="@+id/admin_each_complaint_title_content"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:textColor="#2196F3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/admin_each_complaint_description"
                app:layout_constraintTop_toTopOf="@id/admin_each_complaint_title">

            </TextView>

            <TextView
                android:id="@+id/admin_each_complaint_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/dialog_description"
                android:textColor="#2196F3"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="@id/admin_each_complaint_title"
                app:layout_constraintTop_toBottomOf="@id/admin_each_complaint_title_content">

            </TextView>

            <TextView
                android:id="@+id/admin_each_complaint_description_content"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:textColor="#2196F3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/admin_each_complaint_description"
                app:layout_constraintTop_toTopOf="@id/admin_each_complaint_description">

            </TextView>

            <TextView
                android:id="@+id/admin_each_complaint_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/dialog_address"
                android:textColor="#2196F3"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="@id/admin_each_complaint_title"
                app:layout_constraintTop_toBottomOf="@id/admin_each_complaint_description_content">

            </TextView>

            <TextView
                android:id="@+id/admin_each_complaint_address_content"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:textColor="#2196F3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/admin_each_complaint_description"
                app:layout_constraintTop_toTopOf="@id/admin_each_complaint_address">

            </TextView>

            <TextView
                android:id="@+id/admin_each_complaint_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/dialog_date"
                android:textColor="#2196F3"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="@id/admin_each_complaint_title"
                app:layout_constraintTop_toBottomOf="@id/admin_each_complaint_address_content">

            </TextView>

            <TextView
                android:id="@+id/admin_each_complaint_date_content"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:textColor="#2196F3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/admin_each_complaint_description"
                app:layout_constraintTop_toTopOf="@id/admin_each_complaint_date">

            </TextView>

            <TextView
                android:id="@+id/admin_each_complaint_status_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/dialog_status"
                android:textColor="#2196F3"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="@id/admin_each_complaint_title"
                app:layout_constraintTop_toBottomOf="@id/admin_each_complaint_date_content">

            </TextView>

            <Spinner
                android:id="@+id/admin_each_complaint_spinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/admin_each_complaint_status_text"
                app:layout_constraintStart_toEndOf="@id/admin_each_complaint_description">

            </Spinner>

            <TextView
                android:id="@+id/admin_each_complaint_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/dialog_image"
                android:textColor="#2196F3"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="@id/admin_each_complaint_title"
                app:layout_constraintTop_toBottomOf="@id/admin_each_complaint_spinner">

            </TextView>

            <ImageView
                android:id="@+id/admin_each_complaint_image_view"
                android:layout_width="0dp"
                android:layout_height="150dp"
                app:layout_constraintEnd_toEndOf="@id/admin_each_complaint_date_content"
                app:layout_constraintStart_toStartOf="@id/admin_each_complaint_date_content"
                app:layout_constraintTop_toTopOf="@id/admin_each_complaint_image">

            </ImageView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>